consistent ids for podcasts
